# reeeductio

./: 404.html  API.md  AUTHORIZATION.md  EVENT_SOURCED_STATE.md  LICENSE-MIT  PROJECT_STRUCTURE.md  README.md  TODO.md  index.html  mkdocs.yml  openapi-python-client-config.yaml  openapi.yaml  pyproject.toml  sitemap.xml
.github/workflows/: publish-backend.yml  publish-docs.yml  publish-python-sdk.yml
DOCS_PLAN/: index.html
TODO/: index.html
backend/: .dockerignore  ADMIN.md  DOCKER.md  Dockerfile  FIRESTORE_MIGRATION.md  LOGGING.md  TODO.md  admin_space.py  authorization.py  blob_manager.py  blob_store.py  channel.py  channel_manager.py  config.e2e.yaml  config.example.yaml  config.firestore.example.yaml  config.py  crypto.py  data_store.py  database.py  database_blob_manager.py  database_blob_store.py  docker-compose.e2e.yml  event_sourced_state_store.py  filesystem_blob_manager.py  filesystem_blob_store.py  firestore_data_store.py  firestore_message_store.py  firestore_state_store.py  identifiers.py  logging_config.py  main.py  message_store.py  path_validation.py  pyproject.toml  s3_blob_manager.py  s3_blob_store.py  space.py  space_manager.py  sql_data_store.py  (+9 more)
backend/infra/: main.tf  outputs.tf  variables.tf
backend/tests/: README.md  __init__.py  conftest.py  test_admin_space.py  test_authorization.py  test_blob_auth.py  test_blob_storage.py  test_chain_of_trust.py  test_crypto.py  test_data_storage.py  test_database.py  test_identifiers.py  test_integration.py  test_message_storage.py  test_opaque.py  test_path_validation.py  test_path_validation_integration.py  test_rbac.py  test_state_events.py  test_state_storage.py  test_tools.py  test_websocket.py
backend/tests/e2e/: test_e2e_basic.py
concepts/access-control/: index.html
concepts/blobs/: index.html
concepts/spaces/: index.html
concepts/state-and-data/: index.html
concepts/topics-and-messages/: index.html
docs/: DOCS_PLAN.md  SECURITY.md  TODO.md  index.md
docs-internal/: AUTHORIZATION.md  CHAIN_VALIDATION.md  SECURITY.md  TYPED_IDENTIFIERS.md  UNIFIED_NAMESPACE.md
docs/concepts/: access-control.md  blobs.md  spaces.md  state-and-data.md  topics-and-messages.md
docs/getting-started/: quickstart-python.md  quickstart-typescript.md  running-the-server.md
docs/how-to/: add-users.md  create-a-space.md  manage-permissions.md  password-login.md  self-hosting.md  send-messages.md  store-files.md  tool-accounts.md
docs/reference/: api.md  python-sdk.md  server-config.md  typescript-sdk.md
docs/security/: internals.md  overview.md  threat-model.md
getting-started/quickstart-python/: index.html
getting-started/quickstart-typescript/: index.html
getting-started/running-the-server/: index.html
how-to/add-users/: index.html
how-to/create-a-space/: index.html
how-to/manage-permissions/: index.html
how-to/password-login/: index.html
how-to/self-hosting/: index.html
how-to/send-messages/: index.html
how-to/store-files/: index.html
how-to/tool-accounts/: index.html
ideas/: LOGIN-AND-SSO.md  LOGIN.md  MUSIC.md  swift.md
new-python-sdk/: TODO.md  pyproject.toml
new-python-sdk/reeeductio/: __init__.py  blobs.py  client.py  exceptions.py  local_store.py  messages.py  opaque.py
new-python-sdk/reeeductio/cli/: main.py  utils.py
new-python-sdk/reeeductio/cli/commands/: __init__.py  key.py  space.py
new-python-sdk/tests/: conftest.py  test_cli.py  test_key_derivation.py
python-sdk/: ARCHITECTURE.md  README.md  SECURITY.md  TODO.md  pyproject.toml
python-sdk/examples/: basic_usage.py  key_derivation.py
python-sdk/reeeductio/: README.md  __init__.py  auth.py  blobs.py  client.py  crypto.py  exceptions.py  kvdata.py  messages.py  models.py  opaque.py  state.py
python-sdk/reeeductio/cli/: __init__.py  main.py  utils.py
python-sdk/reeeductio/cli/commands/: __init__.py  auth.py  blob.py  opaque.py  role.py  space.py  tool.py  user.py
python-sdk/reeeductio_client/: __init__.py
python-sdk/reeeductio_client/api/authentication/: post_spaces_space_id_auth_challenge.py  post_spaces_space_id_auth_refresh.py  post_spaces_space_id_auth_verify.py
python-sdk/reeeductio_client/api/blobs/: delete_spaces_space_id_blobs_blob_id.py  get_spaces_space_id_blobs_blob_id.py  put_spaces_space_id_blobs_blob_id.py
python-sdk/reeeductio_client/api/messages/: get_spaces_space_id_topics_topic_id_messages.py  get_spaces_space_id_topics_topic_id_messages_message_hash.py  post_spaces_space_id_topics_topic_id_messages.py
python-sdk/reeeductio_client/api/state/: delete_spaces_space_id_state_path.py  get_spaces_space_id_state_path.py  put_spaces_space_id_state_path.py
python-sdk/reeeductio_client/api/web_socket/: get_spaces_space_id_stream.py
python-sdk/reeeductio_client/models/: __init__.py  capability.py  capability_op.py  delete_spaces_space_id_state_path_body.py  error.py  error_details.py  get_spaces_space_id_topics_topic_id_messages_response_200.py  member.py  message.py  post_spaces_space_id_auth_challenge_body.py  post_spaces_space_id_auth_challenge_response_200.py  post_spaces_space_id_auth_refresh_response_200.py  post_spaces_space_id_auth_verify_body.py  post_spaces_space_id_auth_verify_response_200.py  post_spaces_space_id_topics_topic_id_messages_body.py  post_spaces_space_id_topics_topic_id_messages_response_201.py  put_spaces_space_id_blobs_blob_id_response_201.py  put_spaces_space_id_state_path_body.py  put_spaces_space_id_state_path_response_200.py  role.py  role_grant.py  state_entry.py
python-sdk/tests/: README.md  conftest.py  test_cli.py  test_e2e.py  test_e2e_async.py  test_key_derivation.py  test_opaque_e2e.py  test_smoke.py
reference/api/: index.html
reference/python-sdk/: index.html
reference/server-config/: index.html
reference/typescript-sdk/: index.html
security/internals/: index.html
security/overview/: index.html
security/threat-model/: index.html
typescript-sdk/: TODO.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
typescript-sdk/src/: auth.ts  blobs.ts  client.ts  crypto.ts  debug.ts  exceptions.ts  (+6 more)
(+13 files in other folders)
