[project]
name = "reeducto"
version = "1.0.0"
description = "End-to-end encrypted PubSub messaging system with capability-based authorization"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.10.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",  # For parallel test execution
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "database.py",
    "crypto.py",
    "authorization.py",
    "example_client.py",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
