[project]
name = "reeeductio"
dynamic = ["version"]
description = "End-to-end encrypted PubSub messaging system with capability-based authorization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
    "pyyaml>=6.0.0",
    "google-cloud-firestore>=2.14.0",  # For Firestore backend support
    "opaque_snake",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",  # For parallel test execution
    "pytest-asyncio>=0.23.0",  # For async test support
    "httpx>=0.25.0",  # For WebSocket testing with TestClient
    "testcontainers[google,minio]>=4.0.0",  # For Firestore and MinIO emulators in tests
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
tag_regex = "^(?:backend/)?v(?P<version>.*)$"

[tool.setuptools]
py-modules = [
    "admin_space", "authorization", "blob_store", "config", "crypto",
    "data_store", "event_sourced_state_store", "exceptions", "filesystem_blob_store",
    "firestore_data_store", "firestore_message_store", "identifiers", "logging_config",
    "lru_cache", "main", "message_store", "path_validation", "s3_blob_store",
    "space", "space_manager", "sql_data_store", "sql_message_store",
    "sqlite_blob_store", "sqlite_data_store", "sqlite_message_store", "state_store"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
