[project]
name = "reeeductio"
version = "0.1.0"
description = "A client library for accessing reeeductio Spaces API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "python-dateutil>=2.8.0",
    "cryptography>=41.0.0",
    "websockets>=12.0",
    "click>=8.0.0",
    "opaque-snake",
]
authors = [{name = "Charles Wright"}]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "spaces", 
    "e2ee", 
    "security", 
    "privacy", 
    "encryption",
    "messaging",
    "storage"
]

[project.urls]
Homepage = "https://github.com/cvwright/reeeductio/tree/main/python-sdk"
Repository = "https://github.com/cvwright/reeeductio"

[project.scripts]
reeeductio-admin = "reeeductio.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reeeductio"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: end-to-end tests requiring a running backend (docker-compose.e2e.yml)",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "hatch>=1.16.5",
    "twine>=6.2.0",
]
